Fixing view blog formatting on mobile devices

--- a/.tmp/public/styles/importer.css
+++ b/.tmp/public/styles/importer.css
@@ -738,14 +738,14 @@ body {
 }
 #view-blog .author-image {
   height: 100%;
-  width: 35pt;
+  width: 40px;
   float: left;
 }
 #view-blog .author-namebox {
   height: 100%;
-  width: 150pt;
+  width: 200px;
   float: left;
-  padding-top: 8pt;
+  padding-top: 8px;
   text-align: left;
   padding-left: 8px;
   font-style: italic;
@@ -755,19 +755,19 @@ body {
   font-style: italic;
   font-weight: 200;
   height: 100%;
-  width: 150pt;
+  width: 200px;
   float: right;
-  padding-top: 8pt;
+  padding-top: 8px;
   color: #868686;
 }
 #view-blog .share-box {
-  padding-top: 8pt;
+  padding-top: 8px;
   height: 100%;
-  width: 150pt;
+  width: 200px;
   float: right;
 }
 #view-blog .blog-header {
-  height: 35pt;
+  height: 47px;
   width: 100%;
   margin: auto;
   text-align: center;
@@ -775,9 +775,9 @@ body {
 }
 #view-blog .score-box {
   height: 100%;
-  width: 150pt;
+  width: 200px;
   display: inline-block;
-  padding-top: 8pt;
+  padding-top: 8px;
   font-style: italic;
   font-weight: 200;
 }
@@ -787,7 +787,7 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  border-radius: 18pt;
+  border-radius: 24px;
   border: solid 1px #5e5e5e;
   float: left;
 }
@@ -856,34 +856,35 @@ body {
 @media (max-width: 475px) {
   #view-blog .mobile-timestamp {
     display: block;
-    height: 65pt;
-    width: 80pt;
+    height: 87px;
+    width: 200px;
     font-weight: 200;
     font-style: italic;
     font-size: .65em;
-    padding-top: 2pt;
+    padding-top: 2px;
   }
   #view-blog .author-namebox {
-    padding-top: 0pt;
-    width: 80pt;
+    padding-top: 0px;
+    width: 200px;
   }
   #view-blog .score-box {
     height: 100%;
-    width: 50pt;
+    width: 80px;
     float: left;
-    padding-top: 8pt;
+    padding-top: 8px;
     font-style: italic;
     font-weight: 200;
     font-size: 0.65em;
-    margin-left: 8pt;
+    margin-left: 8px;
+    margin: auto;
   }
   #view-blog .timestamp-box {
     display: none;
   }
   #view-blog .share-box {
-    padding-top: 8pt;
+    padding-top: 8px;
     height: 100%;
-    width: 100pt;
+    width: 35px;
     float: right;
   }
   #view-blog .submit-box {
@@ -899,7 +900,11 @@ body {
     height: 196px;
   }
   #view-blog img[style] {
-    width: 100% !important;
+    max-width: 100% !important;
+    height: auto !important;
+  }
+  #view-blog img {
+    max-width: 100% !important;
     height: auto !important;
   }
   #view-blog iframe.instagram-media {
@@ -910,6 +915,49 @@ body {
   }
   #view-blog table {
     width: 100% !important;
+  }
+  #view-blog .blog-title {
+    font-size: 1.75em;
+    font-weight: 700;
+  }
+}
+@media (max-width: 320px) {
+  #view-blog iframe[height] {
+    height: 140px;
+  }
+  #view-blog .blog-header {
+    height: 50px;
+  }
+  #view-blog .mobile-timestamp {
+    width: 25px;
+    font-size: .75em;
+  }
+  #view-blog .author-image {
+    width: 40px;
+  }
+  #view-blog .author-namebox {
+    width: 100px;
+    padding-top: 8px;
+    padding-left: 8px;
+    font-size: .75em;
+  }
+  #view-blog .mobile-timestamp {
+    width: 100px;
+    padding-top: 2px;
+    font-size: .70em;
+  }
+  #view-blog .share-box {
+    padding-top: 8px;
+    width: 25px;
+    font-size: .875em;
+  }
+  #view-blog .score-box {
+    width: 75px;
+    text-align: right;
+  }
+  #view-blog .blog-title {
+    font-size: 1.75em;
+    font-weight: 700;
   }
 }
 #welcome {
