--- a/assets/styles/pages/blog/view-blog.less
+++ b/assets/styles/pages/blog/view-blog.less
@@ -9,15 +9,15 @@
     
     .author-image {
         height: 100%;
-        width: 35pt;
+        width: 40px;
         float: left;
     }
     
     .author-namebox {
         height: 100%;
-        width: 150pt;
+        width: 200px;
         float: left;
-        padding-top: 8pt;
+        padding-top: 8px;
         text-align: left;
         padding-left: 8px;
         font-style: italic;
@@ -28,21 +28,21 @@
         font-style: italic;
         font-weight: 200;
         height: 100%;
-        width: 150pt;
+        width: 200px;
         float: right;
-        padding-top: 8pt;
+        padding-top: 8px;
         color: rgb(134, 134, 134);
     }
     
     .share-box {
-        padding-top: 8pt;
+        padding-top: 8px;
         height: 100%;
-        width: 150pt;
+        width: 200px;
         float: right;
     }
     
     .blog-header {
-        height: 35pt;
+        height: 47px;
         width: 100%;
         margin: auto;
         text-align: center;
@@ -51,9 +51,9 @@
     
     .score-box {
         height: 100%;
-        width: 150pt;
+        width: 200px;
         display: inline-block;
-        padding-top: 8pt;
+        padding-top: 8px;
         font-style: italic;
         font-weight: 200;
     }
@@ -63,7 +63,7 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
-        border-radius: 18pt;
+        border-radius: 24px;
         border: solid 1px rgb(94, 94, 94);
         float: left;
     }
@@ -140,28 +140,29 @@
         @media (max-width: 475px) {
         .mobile-timestamp {
             display: block;
-            height: 65pt;
-            width: 80pt;
+            height: 87px;
+            width: 200px;
             font-weight: 200;
             font-style: italic;
             font-size: .65em;
-            padding-top: 2pt;
+            padding-top: 2px;
         }
     
         .author-namebox {
-            padding-top: 0pt;
-            width: 80pt;
+            padding-top: 0px;
+            width: 200px;
         }
     
         .score-box {
         height: 100%;
-        width: 50pt;
+        width: 80px;
         float: left;
-        padding-top: 8pt;
+        padding-top: 8px;
         font-style: italic;
         font-weight: 200;
         font-size: 0.65em;
-        margin-left: 8pt;
+        margin-left: 8px;
+        margin:auto;
         }
     
         .timestamp-box {
@@ -169,9 +170,9 @@
         }
     
         .share-box {
-            padding-top: 8pt;
+            padding-top: 8px;
             height: 100%;
-            width: 100pt;
+            width: 35px;
             float: right;
         }
     
@@ -192,7 +193,12 @@
         }
     
         img[style] {
-            width: 100% !important;
+            max-width: 100% !important;
+            height:auto !important;
+        }
+
+        img {
+            max-width: 100% !important;
             height:auto !important;
         }
 
@@ -205,6 +211,59 @@
 
         table {
             width: 100% !important;
+        }
+
+        .blog-title {
+            font-size: 1.75em;
+            font-weight: 700;
+        }
+    }
+
+    @media (max-width: 320px) {
+        iframe[height] {
+            height: 140px;
+        }
+
+        .blog-header {
+            height: 50px;
+        }
+
+        .mobile-timestamp {
+            width: 25px;
+            font-size: .75em;
+        }
+
+        .author-image {
+            width: 40px;
+        }
+        
+        .author-namebox {
+            width: 100px;
+            padding-top: 8px;
+            padding-left: 8px;
+            font-size: .75em;
+        }
+        
+        .mobile-timestamp {
+            width: 100px;
+            padding-top: 2px;
+            font-size: .70em;
+        }
+        
+        .share-box {
+            padding-top: 8px;
+            width: 25px;
+            font-size: .875em;
+        }
+
+        .score-box {
+            width: 75px;
+            text-align: right;
+        }
+
+        .blog-title {
+            font-size: 1.75em;
+            font-weight: 700;
         }
     }
 }
